--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Prólogo | Cadu, o Elfo</title>
+  <title>Prólogo | Elfo</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
